--- a/optimlib.html
+++ b/optimlib.html
@@ -107,7 +107,7 @@
 
 <div class="row">
     <div class="col-md-1"></div>
-    <div class="col-md-3">
+    <div class="col-md-3 hidden-xs hidden-sm">
          <!-- <a href="optimlib_docs_pso.html#examples" target="_blank"><img src="pics/table_fn_3d.png" class="img-rounded pull-left" alt="Sphere" width="304" height="236"></a>  -->
         <script>showImage();</script>
     </div>
@@ -122,7 +122,7 @@
         <a class="github-button" href="https://github.com/kthohr/optim" data-icon="octicon-star" data-count-href="/kthohr/optim/stargazers" data-count-api="/repos/kthohr/optim#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star kthohr/optim on GitHub">Star</a>
         <a class="github-button" href="https://github.com/kthohr/optim/fork" data-icon="octicon-repo-forked" data-count-href="/kthohr/optim/network" data-count-api="/repos/kthohr/optim#forks_count" data-count-aria-label="# forks on GitHub" aria-label="Fork kthohr/optim on GitHub">Fork</a></p>
     </div>
-    <div class="col-md-3">
+    <div class="col-md-3 hidden-xs hidden-sm">
         <!-- <img class="img-responsive" src="pics/wsp_2.jpg" alt=""> -->
         <!-- <img src="pics/rastrigin_fn.png" class="img-rounded pull-right" alt="Sphere" width="304" height="236"> -->
         <!-- <a href="optimlib_docs_de.html#examples" target="_blank"><img src="pics/ackley_fn_3d.png" class="img-rounded pull-right" alt="Ackley" width="304" height="236"></a> -->
