--- a/statslib.html
+++ b/statslib.html
@@ -83,7 +83,7 @@ pre {
 
 <div class="row">
     <div class="col-md-2"></div>
-    <div class="col-md-2 hidden-xs">
+    <div class="col-md-2 hidden-xs hidden-sm">
         <img src="pics/stats_pnorm.png" class="img-responsive center-block">
     </div>
     <div class="col-md-4">
@@ -95,7 +95,7 @@ pre {
          <a class="github-button" href="https://github.com/kthohr/stats" data-icon="octicon-star" data-count-href="/kthohr/stats/stargazers" data-count-api="/repos/kthohr/stats#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star kthohr/stats on GitHub">Star</a> 
          <a class="github-button" href="https://github.com/kthohr/stats/fork" data-icon="octicon-repo-forked" data-count-href="/kthohr/stats/network" data-count-api="/repos/kthohr/stats#forks_count" data-count-aria-label="# forks on GitHub" aria-label="Fork kthohr/stats on GitHub">Fork</a></p> 
     </div>
-    <div class="col-md-2 hidden-xs">
+    <div class="col-md-2 hidden-xs hidden-sm">
         <img src="pics/stats_qlaplace.png" class="img-responsive center-block">
     </div>
 </div>
