--- a/trame.html
+++ b/trame.html
@@ -77,7 +77,7 @@
 
 <div class="row">
     <div class="col-md-1"></div>
-    <div class="col-md-2">
+    <div class="col-md-2 hidden-xs hidden-sm">
         <!-- <img class="img-responsive" src="pics/wsp_2.jpg" alt=""> -->
         <a href="https://en.wikipedia.org/wiki/Gaspard_Monge" target="_blank"><img src="pics/trame_monge.png" class="img-responsive center-block" alt="" width="150" height="150"></a>
     </div>
@@ -90,7 +90,7 @@
         <a class="github-button" href="https://github.com/TraME-Project/TraME" data-icon="octicon-star" data-count-href="/TraME-Project/TraME/stargazers" data-count-api="/repos/TraME-Project/TraME#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star TraME-Project/TraME on GitHub">Star</a> 
         <a class="github-button" href="https://github.com/TraME-Project/TraME/fork" data-icon="octicon-repo-forked" data-count-href="/TraME-Project/TraME/network" data-count-api="/repos/TraME-Project/TraME#forks_count" data-count-aria-label="# forks on GitHub" aria-label="Fork TraME-Project/TraME on GitHub">Fork</a></p> 
     </div>
-    <div class="col-md-2">
+    <div class="col-md-2 hidden-xs hidden-sm">
         <a href="https://en.wikipedia.org/wiki/Leonid_Kantorovich" target="_blank"><img src="pics/trame_kantorovich.png" class="img-responsive center-block" alt="" width="150" height="150"></a>
     </div>
 </div>        
