--- a/r-mac-source.html
+++ b/r-mac-source.html
@@ -76,7 +76,7 @@
 
 <div class="row">
     <div class="col-md-1"></div>
-    <div class="col-md-2 hidden-xs">
+    <div class="col-md-2 hidden-xs hidden-sm">
         <!-- <img class="img-responsive" src="pics/wsp_2.jpg" alt=""> -->
         <a href="https://www.r-project.org/" target="_blank"><img src="pics/Rlogo.png" class="img-responsive center-block"></a>
     </div>
