--- a/statslib.html
+++ b/statslib.html
@@ -91,7 +91,7 @@ pre {
         <h3 style="text-align: center;"><strong style="font-size: 130%;"><u>StatsLib</u></strong></h3>
          <p style="text-align: center;"><a href="https://travis-ci.org/kthohr/stats" target="_blank"><img src="https://travis-ci.org/kthohr/stats.svg?branch=master" alt="StatsLib Build"></a> 
          <a href="https://codecov.io/github/kthohr/stats?branch=master" target="_blank"><img src="https://codecov.io/github/kthohr/stats/coverage.svg?branch=master" alt="Coverage Status"></a>
-         <a href="https://raw.githubusercontent.com/kthohr/stats/master/LICENSE" target="_blank"><img src="https://img.shields.io/badge/Licence-Apache%202.0-blue.svg" alt="License"></a></p> 
+         </p> 
          <p style="text-align: center;"><a class="github-button" href="https://github.com/kthohr/stats/subscription" data-icon="octicon-eye" data-count-href="/kthohr/stats/watchers" data-count-api="/repos/kthohr/stats#subscribers_count" data-count-aria-label="# watchers on GitHub" aria-label="Watch kthohr/stats on GitHub">Watch</a> 
          <a class="github-button" href="https://github.com/kthohr/stats" data-icon="octicon-star" data-count-href="/kthohr/stats/stargazers" data-count-api="/repos/kthohr/stats#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star kthohr/stats on GitHub">Star</a> 
          <a class="github-button" href="https://github.com/kthohr/stats/fork" data-icon="octicon-repo-forked" data-count-href="/kthohr/stats/network" data-count-api="/repos/kthohr/stats#forks_count" data-count-aria-label="# forks on GitHub" aria-label="Fork kthohr/stats on GitHub">Fork</a></p> 
@@ -136,7 +136,7 @@ pre {
 
 <p><strong>Author</strong>: Keith O'Hara</p>
 
-<p><strong>License</strong>: Apache License, Version 2.0.</p>
+<p><a href="https://raw.githubusercontent.com/kthohr/stats/master/LICENSE" target="_blank"><img src="https://img.shields.io/badge/Licence-Apache%202.0-blue.svg" alt="License"></a></p>
 
 <hr style="height:2px;border-width:0;background-color:black">
 
