--- a/gcem.html
+++ b/gcem.html
@@ -85,7 +85,7 @@ pre {
          <!-- <p style="text-align: center;"><a href="https://github.com/kthohr/gcem" target="_blank"><i class="fa fa-github-square fa-2x" style="color:black"></i></a></p>  -->
          <p style="text-align: center;"><a href="https://travis-ci.org/kthohr/gcem" target="_blank"><img src="https://travis-ci.org/kthohr/gcem.svg?branch=master" alt="GCEM Build"></a> 
          <a href="https://codecov.io/github/kthohr/gcem?branch=master" target="_blank"><img src="https://codecov.io/github/kthohr/gcem/coverage.svg?branch=master" alt="Coverage Status"></a>
-         <a href="https://raw.githubusercontent.com/kthohr/gcem/master/LICENSE" target="_blank"><img src="https://img.shields.io/badge/Licence-Apache%202.0-blue.svg" alt="License"></a></p>
+         </p>
          <p style="text-align: center;"><a class="github-button" href="https://github.com/kthohr/gcem/subscription" data-icon="octicon-eye" data-count-href="/kthohr/gcem/watchers" data-count-api="/repos/kthohr/gcem#subscribers_count" data-count-aria-label="# watchers on GitHub" aria-label="Watch kthohr/gcem on GitHub">Watch</a> 
          <a class="github-button" href="https://github.com/kthohr/gcem" data-icon="octicon-star" data-count-href="/kthohr/gcem/stargazers" data-count-api="/repos/kthohr/gcem#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star kthohr/gcem on GitHub">Star</a> 
          <a class="github-button" href="https://github.com/kthohr/gcem/fork" data-icon="octicon-repo-forked" data-count-href="/kthohr/gcem/network" data-count-api="/repos/kthohr/gcem#forks_count" data-count-aria-label="# forks on GitHub" aria-label="Fork kthohr/gcem on GitHub">Fork</a></p> 
@@ -142,7 +142,7 @@ pre {
 
 <p><strong>Author</strong>: Keith O'Hara</p>
 
-<p><strong>License</strong>: Apache License, version 2.0.</p>
+<p><a href="https://raw.githubusercontent.com/kthohr/gcem/master/LICENSE" target="_blank"><img src="https://img.shields.io/badge/Licence-Apache%202.0-blue.svg" alt="License"></a></p>
 
 <!--  -->
 
