--- a/gcem.html
+++ b/gcem.html
@@ -210,7 +210,7 @@ Lcfi2:
 	pop	rbp
 	ret
 	.cfi_endproc
-}</pre>
+</pre>
 We see that a function call has been replaced by a numeric value (10! = 3628800).
 
 <p>To build and run the full test suite:</p>
