update MCMC pages

--- a/mcmclib_docs_de.html
+++ b/mcmclib_docs_de.html
@@ -84,6 +84,7 @@ pre {
 <br>
 
 <div class="row">
+    <div class="col-md-2"></div>
     <div class="col-md-4">
         <div class="panel panel-default">
             <div class="panel-heading">
@@ -100,7 +101,13 @@ pre {
     </div>
 </div>
 
-<p>Differential Evolution (DE) MCMC is a variant of the well-known stochastic genetic search algorithm for global optimization.</p>
+<!--  -->
+
+<div class="row">
+    <div class="col-md-2"></div>
+    <div class="col-md-8">
+
+<p>Differential Evolution (DE) is a MCMC variant of the well-known stochastic genetic search algorithm used for global optimization.</p>
 
 <hr style="height:2px;border-width:0;background-color:black">
 
@@ -257,6 +264,8 @@ int main()
 }
 </pre>
 
+    </div>
+    </div>
     </div>
 
     <div id="myfooter"></div>
