--- a/mcmclib.html
+++ b/mcmclib.html
@@ -68,7 +68,8 @@
         <div id="mcmchead"></div>
 
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-1"></div>
+    <div class="col-md-3 hidden-xs hidden-sm">
          <!-- <a href="optimlib_docs_pso.html#examples" target="_blank"><img src="pics/table_fn_3d.png" class="img-rounded pull-left" alt="Sphere" width="304" height="236"></a>  -->
         <script>showImage();</script>
     </div>
@@ -83,12 +84,21 @@
         <a class="github-button" href="https://github.com/kthohr/mcmc" data-icon="octicon-star" data-count-href="/kthohr/mcmc/stargazers" data-count-api="/repos/kthohr/mcmc#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star kthohr/mcmc on GitHub">Star</a>
         <a class="github-button" href="https://github.com/kthohr/mcmc/fork" data-icon="octicon-repo-forked" data-count-href="/kthohr/mcmc/network" data-count-api="/repos/kthohr/mcmc#forks_count" data-count-aria-label="# forks on GitHub" aria-label="Fork kthohr/mcmc on GitHub">Fork</a></p>
     </div>
-    <div class="col-md-4">
+    <div class="col-md-3 hidden-xs hidden-sm">
         <!-- <img class="img-responsive" src="pics/wsp_2.jpg" alt=""> -->
         <!-- <img src="pics/rastrigin_fn.png" class="img-rounded pull-right" alt="Sphere" width="304" height="236"> -->
         <!-- <a href="optimlib_docs_de.html#examples" target="_blank"><img src="pics/ackley_fn_3d.png" class="img-rounded pull-right" alt="Ackley" width="304" height="236"></a> -->
     </div>
 </div>
+
+<br>
+
+<!--  -->
+
+<div class="row">
+
+    <div class="col-md-2"></div>
+    <div class="col-md-8">
 
 <p>MCMCLib is a C++ library of Markov Chain Monte Carlo methods.</p>
 
@@ -115,7 +125,7 @@
 
 <p><strong>Author</strong>: Keith O'Hara</p>
 
-<p><strong>License</strong>: Apache License, version 2.0.</p>
+<p><a href="https://raw.githubusercontent.com/kthohr/mcmc/master/LICENSE" target="_blank"><img src="https://img.shields.io/badge/Licence-Apache%202.0-blue.svg" alt="License"></a></p>
 
 <hr style="height:2px;border-width:0;background-color:black">
 
@@ -138,13 +148,15 @@ make install</pre>
 <p>Configuration options: (see <code>./configure -h</code>)</p>
 <ul>
     <li><code>-c</code> a coverage build</li>
-    <li><code>-d</code> a 'development' build with install names set to the build directory (as opposed to an install path)</li>
-    <li><code>-g</code> a debugging build</li>
+    <li><code>-d</code> a 'development' build</li>
+    <li><code>-g</code> a debugging build (optimization flags set to <code>-O0 -g</code>)</li>
     <li><code>-h</code> print help</li>
-    <li><code>-i</code> install path; default: build directory.</li>
-    <li><code>-m</code> specify the BLAS and Lapack libraries to link against; for example, <code>-m "-lopenblas"</code> or <code>-m "-framework Accelerate"</code></li>
-    <li><code>-o</code> compiler optimization options; defaults to <code>-O3 -march=native -ffp-contract=fast -flto -DARMA_NO_DEBUG</code>
-    <li><code>-p</code> enable OpenMP parallelization features (recommended)</li>
+    <li><code>-i</code> install path; default: the build directory</li>
+    <li><code>-m</code> specify the BLAS and Lapack libraries to link against;
+    <br> &nbsp &nbsp &nbsp &nbsp examples: <code>-m "-lopenblas"</code> or <code>-m "-framework Accelerate"</code></li>
+    <li><code>-o</code> compiler optimization options;
+    <br> &nbsp &nbsp &nbsp &nbsp default: <code>-O3 -march=native -ffp-contract=fast -flto -DARMA_NO_DEBUG</code>
+    <li><code>-p</code> enable OpenMP parallelization features (<strong>recommended</strong>)</li>
 </ul>
 
 <h4 style="text-align: left;"><strong style="font-size: 95%;">Armadillo</strong></h3>
@@ -155,6 +167,10 @@ export ARMA_INCLUDE_PATH=/path/to/armadillo</pre>
 
 Otherwise the build script will download the required files from the Armadillo GitLab repository.
 
+<hr>
+
+    </div>
+    </div>
     </div>
 
     <div id="myfooter"></div>
