--- a/mcmclib_docs_mala.html
+++ b/mcmclib_docs_mala.html
@@ -84,7 +84,8 @@ pre {
 <br>
 
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-2"></div>
+    <div class="col-md-6">
         <div class="panel panel-default">
             <div class="panel-heading">
                 <a data-toggle="collapse" href="#collapse1"><h4><strong style="font-size: 120%;">MCMC: Metropolis-adjusted Langevin Algorithm</strong></h4></a>
@@ -100,6 +101,12 @@ pre {
     </div>
 </div>
 
+<!--  -->
+
+<div class="row">
+    <div class="col-md-2"></div>
+    <div class="col-md-8">
+
 <p>MCMC via Langevin diffusions.</p>
 
 <hr style="height:2px;border-width:0;background-color:black">
@@ -112,12 +119,12 @@ bool mala(const arma::vec& initial_vals, arma::mat& draws_out, std::function&lt;
 </pre>
 <p><strong>Function arguments:</strong></p>
 <ul>
-    <li><code>initial_vals</code> a column vector of initial values; will be replaced by the solution values.</li>
-    <li><code>draws_out</code> a two-dimensional array containing posterior draws.</li>
-    <li><code>target_log_kernel</code> the posterior kernel function, taking three arguments: 
+    <li><code>initial_vals</code> a column vector of initial values.</li>
+    <li><code>draws_out</code> a two-dimensional array containing the posterior draws.</li>
+    <li><code>target_log_kernel</code> the target log-posterior kernel function, taking three arguments: 
         <ul>
             <li><code>vals_inp</code> a vector of input values;</li>
-            <li><code>grad_out</code> a vector to store the gradient; and</li>
+            <li><code>grad_out</code> a vector to store the gradient values; and</li>
             <li><code>target_data</code> additional parameters passed to the function.</li>
         </ul>
     <li><code>target_data</code> additional parameters passed to the posterior kernel.</li>
@@ -147,7 +154,7 @@ bool mala(const arma::vec& initial_vals, arma::mat& draws_out, std::function&lt;
         $$\mu(\theta^{(i)}) := \theta^{(i)} + \frac{\epsilon^2}{2} \mathbf{M} \nabla_\theta \ln K(\theta^{(i)} | X)$$
         where $K$ is the posterior kernel and $\epsilon = $ <code>mala_step_size</code>.
         <br><br>
-        The proposal draw is:
+        Generate a proposal draw:
         $$\theta^{(*)} = \mu(\theta^{(i)}) + \epsilon W$$
         where $W \sim N(0,\mathbf{M})$.
     </li>
@@ -243,6 +250,8 @@ int main()
 }
 </pre>
 
+    </div>
+    </div>
     </div>
 
     <div id="myfooter"></div>
