--- a/optimlib_docs_gd.html
+++ b/optimlib_docs_gd.html
@@ -164,7 +164,7 @@ $$x^{(i+1)} = x^{(i)} - d^{(i)}$$
     <li><code>gd_method = 3</code>: <strong>AdaGrad</strong></li>
         $$v^{(i)} = v^{(i-1)} + \nabla f^{(i)} \odot \nabla f^{(i)}$$
         $$d^{(i)} = \nabla f^{(i)} / ( \sqrt{v^{(i)}} + \epsilon) $$
-        where $v^{(0)} = \mathbf{0}$; $\odot$ denotes the Hadamard (element-by-element) product; and $\epsilon$ is a small normaliation term, set by <code>norm_term</code>.
+        where $v^{(0)} = \mathbf{0}$; $\odot$ denotes the Hadamard (element-by-element) product; and $\epsilon$ is a small normalization term, set by <code>norm_term</code>.
     <li><code>gd_method = 4</code>: <strong>RMSProp</strong></li>
         $$v^{(i)} = \rho \times v^{(i-1)} + (1-\rho) \times \nabla f^{(i)} \odot \nabla f^{(i)}$$
         $$d^{(i)} = \nabla f^{(i)} / ( \sqrt{v^{(i)}} + \epsilon) $$
