--- a/mcmclib_header.html
+++ b/mcmclib_header.html
@@ -11,7 +11,11 @@
                     <li><a href="mcmclib_docs_hmc.html">HMC</a></li>
                     <li><a href="mcmclib_docs_mala.html">MALA</a></li>
                     <li class="divider"></li>
+                    <li><a href="mcmclib_docs_rmhmc.html">RM-HMC</a></li>
+                    <!-- <li><a href="mcmclib_docs_rmmala.html">RM-MALA</a></li> -->
+                    <li class="divider"></li>
                     <li><a href="mcmclib_docs_de.html">Differential Evolution</a></li>
+                    <li><a href="mcmclib_docs_aees.html">Equi-Energy Sampler</a></li>
                 </ul>
             </li>
             <li class="dropdown">
