--- a/r-mac-source.html
+++ b/r-mac-source.html
@@ -115,7 +115,7 @@
     <div class="col-md-1"></div>
     <div class="col-md-10">
 
-<p>This page describes the steps involved in compiling R-devel on a Mac operating system (macOS, formerly known as OS X), with an emphasis on non-standard build configurations that can significantly improve computing times versus a standard build.</p>
+<p>This page describes the steps involved in compiling R-devel on a Mac operating system (macOS, formerly known as OS X), with an emphasis on non-standard build configurations that can significantly improve computing performance compared to a standard build.</p>
 
 <hr style="height:2px;border-width:0;background-color:black">
 
@@ -135,7 +135,7 @@ Apple LLVM version 9.0.0 (clang-900.0.39.2)
 Target: x86_64-apple-darwin17.3.0
 Thread model: posix</pre>
     </ul>
-    <li> Download and install <a href="https://www.xquartz.org/" target="_blank">XQuartz</a>. (You might need to restart your computer to complete the installation process.)</li>
+    <li> Download and install <a href="https://www.xquartz.org/" target="_blank">XQuartz</a>. (A computer restart might be required to complete the installation process.)</li>
     <li> Download and install the <a href="http://www.oracle.com/technetwork/java/javase/downloads/jdk8-downloads-2133151.html" target="_blank">Java SDK</a>. (No need for the 'demos and samples' pack.)</li>
 </ul>
 <p>Most of the following items are from the <a href="https://r.research.att.com/libs/" target="_blank">R-devel optional library list</a>.</p>
