--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
                 <br>
 
-                <p>My research interests include:</p>
+                <p>My academic research interests include:</p>
                 <ul>
                     <li>Econometric Theory</li>
                     <li>Computational Methods</li>
@@ -84,7 +84,15 @@
 
                 <br>
 
-                <p>Below you can find links to my work.</p>
+                <p>My computational interests include:</p>
+                <ul>
+                    <li>Numerical linear algebra</li>
+                    <li>Nonlinear optimization</li>
+                    <li>Computation of special functions</li>
+                    <li>Template metaprogramming</li>
+                </ul>
+
+                <p>Most of my computational work involves R and C++. Below you can find links to some of my projects.</p>
 
                 <hr style="height:2px;border-width:0;background-color:black">
             </div>
