--- a/mcmclib.html
+++ b/mcmclib.html
@@ -119,7 +119,7 @@
             <li>Equi-Energy sampling; and</li>
             <li>Differential Evolution</li>
         </ul>
-    <li>Built on the <a href="http://arma.sourceforge.net" target="_blank">Armadillo C++ linear algebra library</a> for fast and efficient matrix computation.</li>
+    <li>Built on the <a href="http://arma.sourceforge.net" target="_blank">Armadillo C++ linear algebra library</a> for fast and efficient matrix-based computation.</li>
     <li>Released under a permissive, non-GPL license.</li>
 </ul>
 
