--- a/about.html
+++ b/about.html
@@ -80,15 +80,44 @@
 
         <!-- Intro Content -->
         <div class="row">
-            <div class="col-md-4">
+            <div class="col-md-5">
                 <img class="img-responsive" src="pics/wsp_2.jpg" alt="">
             </div>
-            <div class="col-md-8">
+            <div class="col-md-7">
                 <!-- <h2>About</h2> -->
-                <br>
-                <p>My name is Keith O'Hara. I am a Ph.D. Candidate at <abbr title="New York University">NYU</abbr>'s Department of Economics.</p>
-                <br>
-                <h4>Contact Details</h4>
+                <!-- <br> -->
+                <p>My name is Keith O'Hara. I am a Ph.D. Candidate at <abbr title="New York University">NYU</abbr>'s Department of Economics. My primary research topics are Econometrics and Computational Methods.</p>
+                <!-- <br> -->
+                <p>In the computational world, I am the author of several C++ libraries and R packages in the areas of:</p>
+                <ul>
+                    <li><a href="https://github.com/kthohr/BMR" target="_blank">Macroeconometrics</a></li>
+                    <li><a href="https://github.com/TraME-Project/TraME" target="_blank">Optimal Transport and models of matching</a></li>
+                    <li><a href="https://github.com/kthohr/stats" target="_blank">Statistics</a></li>
+                    <li><a href="https://github.com/kthohr/optim" target="_blank">Nonlinear optimization</a></li>
+                    <li><a href="https://github.com/kthohr/mcmc" target="_blank">Bayesian simulation methods</a></li>
+                    <li><a href="https://github.com/kthohr/gcem" target="_blank">Computation of special functions</a></li>
+                </ul>
+                <p>Other Open Source projects that I like and, on occasion, contribute to:</p>
+                <ul>
+                    <li><a href="https://www.r-project.org/" target="_blank">The R Project</a></li>
+                    <ul>
+                        <li>macOS developers: consider joining the <a href="https://stat.ethz.ch/mailman/listinfo/r-sig-mac" target="_blank">dedicated development list</a>.</li>
+                        <li>A new group, started by John C. Nash, and supported by the <a href="https://www.r-consortium.org/" target="_blank">R Consortium</a>, is revisiting many of R's core algorithms. Checkout our progress <a href="https://gitlab.com/nashjc/histoRicalg" target="_blank">here</a> and consider joining!</li>
+                    </ul>
+                    <li><a href="http://arma.sourceforge.net/" target="_blank">Armadillo C++ linear algebra library</a></li>
+                    <ul>
+                        <li>An expression template library for high performance, matrix-based computation.</li>
+                        <li><a href="https://github.com/RcppCore/RcppArmadillo" target="_blank">R wrapper</a>.</li>
+                    </ul>
+                </ul>
+                <hr>
+                <!-- <h4>Contact Details</h4> -->
+                <p>My contact details are below.</p>
+                <ul>
+                    <li>Please note that I receive a high volume of email, and my response rate is less than perfect. If I do not respond to your query within <strong>2 business days</strong> please resend your email.</li>
+                    <li>If you are contacting me about an issue related a project of mine that is listed on a social coding platform (like GitHub) consider using the associated Issues feature instead.</li>
+                </ul>
+                <!-- <br> -->
                 <p><i i class="fa fa-address-card-o" aria-hidden="true"></i> 19 W 4th St<br>&nbsp; &nbsp; &nbsp; 6FL<br>&nbsp; &nbsp; &nbsp; New York, NY 10012<br>
                 </p>
                 <p><i class="fa fa-envelope-o"></i> <a href="mailto:keith.ohara@nyu.edu">&nbsp;keith.ohara@nyu.edu</a>
@@ -96,7 +125,7 @@
                 <ul class="list-unstyled list-inline list-social-icons">
                     <li>
                         <a href="https://github.com/kthohr" target="_blank"><i class="fa fa-github-square fa-2x"></i></a>
-<a class="github-button" href="https://github.com/kthohr" data-count-href="/kthohr/followers" data-count-api="/users/kthohr#followers" data-count-aria-label="# followers on GitHub" aria-label="Follow @kthohr on GitHub">Follow @kthohr</a>
+                        <a class="github-button" href="https://github.com/kthohr" data-count-href="/kthohr/followers" data-count-api="/users/kthohr#followers" data-count-aria-label="# followers on GitHub" aria-label="Follow @kthohr on GitHub">Follow @kthohr</a>
                     </li>
                 </ul>
             </div>
