--- a/navbar.html
+++ b/navbar.html
@@ -65,19 +65,19 @@
                         <a href="research.html">Research</a>
                         <!-- <a href="#">Research</a> -->
                     </li>
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Teaching <b class="caret"></b></a>
-                        <ul class="dropdown-menu">
-                            <li>
+                    <!-- <li class="dropdown"> -->
+                        <!-- <a href="#" class="dropdown-toggle" data-toggle="dropdown">Teaching <b class="caret"></b></a> -->
+                        <!-- <ul class="dropdown-menu"> -->
+                            <!-- <li> -->
                                 <!-- <a href="phd_metrics.html">Econometrics</a> -->
-                                <a href="#">PhD Econometrics</a>
-                            </li>
-                            <li>
+                                <!-- <a href="#">PhD Econometrics</a> -->
+                            <!-- </li> -->
+                            <!-- <li> -->
                                 <!-- <a href="fin_econ.html">Financial Economics</a> -->
-                                <a href="#">Financial Economics</a>
-                            </li>
-                        </ul>
-                    </li>
+                                <!-- <a href="#">Financial Economics</a> -->
+                            <!-- </li> -->
+                        <!-- </ul> -->
+                    <!-- </li> -->
                     <!-- <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Other <b class="caret"></b></a>
                         <ul class="dropdown-menu">
