--- a/about.html
+++ b/about.html
@@ -114,7 +114,7 @@
                 <!-- <h4>Contact Details</h4> -->
                 <p>My contact details are below.</p>
                 <ul>
-                    <li>Please note: I receive a high volume of emails, and my response rate is less than perfect. If I do not respond to your query within <strong>2 business days</strong> please resend your email.</li>
+                    <!-- <li>Please note: I receive a high volume of emails, and my response rate is less than perfect. If I do not respond to your query within <strong>2 business days</strong> please resend your email.</li> -->
                     <li>If you are contacting me about an issue related a project of mine that is listed on a social coding platform (like GitHub) consider using the associated Issues feature instead.</li>
                 </ul>
                 <!-- <br> -->
