--- a/about.html
+++ b/about.html
@@ -80,7 +80,8 @@
 
         <!-- Intro Content -->
         <div class="row">
-            <div class="col-md-5">
+            <!-- <div class="col-md-1"></div> -->
+            <div class="col-md-4">
                 <img class="img-responsive" src="pics/wsp_2.jpg" alt="">
             </div>
             <div class="col-md-7">
