--- a/about.html
+++ b/about.html
@@ -68,7 +68,8 @@
 
         <!-- Page Heading/Breadcrumbs -->
         <div class="row">
-            <div class="col-lg-12">
+            <div class="col-lg-1"></div>
+            <div class="col-lg-10">
                 <!-- <h1 class="page-header">About </h1> -->
                 <h1>About</h1>
                 <hr style="height:2px;border-width:0;background-color:black">
@@ -80,11 +81,11 @@
 
         <!-- Intro Content -->
         <div class="row">
-            <!-- <div class="col-md-1"></div> -->
+            <div class="col-md-1"></div>
             <div class="col-md-4">
                 <img class="img-responsive" src="pics/wsp_2.jpg" alt="">
             </div>
-            <div class="col-md-7">
+            <div class="col-md-6">
                 <!-- <h2>About</h2> -->
                 <!-- <br> -->
                 <p>My name is Keith O'Hara. I am a Ph.D. Candidate at <abbr title="New York University">NYU</abbr>'s Department of Economics. My primary research topics are Econometrics and Computational Methods.</p>
