--- a/about.html
+++ b/about.html
@@ -108,7 +108,7 @@
                     </ul>
                     <li><a href="http://arma.sourceforge.net/" target="_blank">Armadillo C++ linear algebra library</a></li>
                     <ul>
-                        <li>An expression template library for high performance, matrix-based computation.</li>
+                        <li>An expression template library for matrix-based computation.</li>
                         <li><a href="https://github.com/RcppCore/RcppArmadillo" target="_blank">R wrapper</a>.</li>
                     </ul>
                 </ul>
