--- a/about.html
+++ b/about.html
@@ -99,7 +99,7 @@
                     <li><a href="https://github.com/kthohr/mcmc" target="_blank">Bayesian simulation methods</a></li>
                     <li><a href="https://github.com/kthohr/gcem" target="_blank">Computation of special functions</a></li>
                 </ul>
-                <p>Other Open Source projects that I like and, on occasion, contribute to:</p>
+                <p>Other open-source projects that I like and, on occasion, contribute to:</p>
                 <ul>
                     <li><a href="https://www.r-project.org/" target="_blank">The R Project</a></li>
                     <ul>
