--- a/about.html
+++ b/about.html
@@ -104,7 +104,7 @@
                     <li><a href="https://www.r-project.org/" target="_blank">The R Project</a></li>
                     <ul>
                         <li>macOS developers: consider joining the <a href="https://stat.ethz.ch/mailman/listinfo/r-sig-mac" target="_blank">dedicated development list</a>.</li>
-                        <li>A new group, started by John C. Nash, and supported by the <a href="https://www.r-consortium.org/" target="_blank">R Consortium</a>, is revisiting many of R's core algorithms. Checkout our progress <a href="https://gitlab.com/nashjc/histoRicalg" target="_blank">here</a> and consider joining!</li>
+                        <li>A new group, started by John C. Nash, and supported by the <a href="https://www.r-consortium.org/" target="_blank">R Consortium</a>, is revisiting many of R's core algorithms. Checkout our progress <a href="https://gitlab.com/nashjc/histoRicalg" target="_blank">here</a>.</li>
                     </ul>
                     <li><a href="http://arma.sourceforge.net/" target="_blank">Armadillo C++ linear algebra library</a></li>
                     <ul>
@@ -116,8 +116,7 @@
                 <!-- <h4>Contact Details</h4> -->
                 <p>My contact details are below.</p>
                 <ul>
-                    <!-- <li>Please note: I receive a high volume of emails, and my response rate is less than perfect. If I do not respond to your query within <strong>2 business days</strong> please resend your email.</li> -->
-                    <li>If you are contacting me about an issue related a project of mine that is listed on a social coding platform (like GitHub) consider using the associated Issues feature instead.</li>
+                    <li>If you are contacting me about an issue related a project that is hosted on a social coding platform (like GitHub), consider using the associated Issues feature instead.</li>
                 </ul>
                 <!-- <br> -->
                 <p><i i class="fa fa-address-card-o" aria-hidden="true"></i> 19 W 4th St<br>&nbsp; &nbsp; &nbsp; 6FL<br>&nbsp; &nbsp; &nbsp; New York, NY 10012<br>
