--- a/about.html
+++ b/about.html
@@ -82,7 +82,7 @@
         <!-- Intro Content -->
         <div class="row">
             <div class="col-md-1"></div>
-            <div class="col-md-4">
+            <div class="col-md-4 hidden-xs hidden-sm">
                 <img class="img-responsive" src="pics/wsp_2.jpg" alt="">
             </div>
             <div class="col-md-6">
@@ -90,7 +90,7 @@
                 <!-- <br> -->
                 <p>My name is Keith O'Hara. I am a Ph.D. Candidate at <abbr title="New York University">NYU</abbr>'s Department of Economics. My primary research topics are Econometrics and Computational Methods.</p>
                 <hr>
-                <p>In the computational world, I am the author of several open-source C++ libraries and R packages in the areas of:</p>
+                <p>I am the author of several open-source C++ libraries and R packages in the areas of:</p>
                 <ul>
                     <li><a href="https://github.com/kthohr/BMR" target="_blank">Macroeconometrics</a></li>
                     <li><a href="https://github.com/TraME-Project/TraME" target="_blank">Optimal Transport and models of matching</a></li>
