--- a/about.html
+++ b/about.html
@@ -116,7 +116,7 @@
                 <!-- <h4>Contact Details</h4> -->
                 <p>My contact details are below.</p>
                 <ul>
-                    <li>If you are contacting me about an issue related a project that is hosted on a social coding platform (like GitHub), consider using the associated Issues feature instead.</li>
+                    <li>If you are contacting me about an issue related to a project that is hosted on a social coding platform (like GitHub), consider using the associated Issues feature instead.</li>
                 </ul>
                 <!-- <br> -->
                 <p><i i class="fa fa-address-card-o" aria-hidden="true"></i> 19 W 4th St<br>&nbsp; &nbsp; &nbsp; 6FL<br>&nbsp; &nbsp; &nbsp; New York, NY 10012<br>
